--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/book_tracker
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
